--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ db.password=123
 db.pool.initSize=5
 db.pool.maxSize=10
 hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+
+elasticsearch.home=/home/user/Desktop/LeetCode
+index.all.during.startup=true
